hellowhale-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: hello-whale-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.org/rewrites: "serviceName=hello-green-whale-svc rewrite=/;serviceName=hello-blue-whale-svc rewrite=/"
spec:
  rules:
  - host: hello.whale.info
    http:
      paths:
      - path: /green/(.*)
        backend:
          serviceName: hello-green-whale-svc
          servicePort: 80
      - path: /blue/(.*)
        backend:
          serviceName: hello-blue-whale-svc
          servicePort: 80
